Do not fail build if there is no gradle.properties

--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,7 @@ artifacts {
 
 // sign all artifacts
 signing {
+    required { gradle.taskGraph.hasTask("uploadArchives") }
     sign configurations.archives
 }
 
@@ -106,7 +107,8 @@ uploadArchives {
             
             // upload to sonatype OSS
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
-                authentication(userName: sonatypeUsername, password: sonatypePassword)
+                authentication(userName: this.hasProperty('sonatypeUsername') ? sonatypeUsername : '',
+                    password: this.hasProperty('sonatypePassword') ? sonatypePassword : '')
             }
             
             // pom file details
