--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,11 @@ allprojects {
     
     dependencies {
         compile 'org.mongodb:mongo-java-driver:2.7.3'
-        compile 'net.sf.trove4j:trove4j:3.0.2'
         compile 'com.google.guava:guava:11.0.2'
         
         testCompile 'junit:junit:4.10'
         testCompile 'com.carrotsearch:junit-benchmarks:0.3.0'
+        testCompile 'net.sf.trove4j:trove4j:3.0.2'
     }
 }
 
