Set compatibility to Java 6

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ allprojects {
     apply plugin: 'eclipse'
     
     group = 'de.fhg.igd'
+    sourceCompatibility = '1.6'
+    targetCompatibility = '1.6'
     
     repositories {
         mavenCentral()
