Added gradle wrapper

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,11 @@ jar {
     from 'LICENSE.txt'
 }
 
+// initialize gradle wrapper
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.2'
+}
+
 // package javadoc into a jar file
 task packageJavadoc(type: Jar, dependsOn: 'javadoc') {
     from javadoc.destinationDir
@@ -82,12 +87,8 @@ task packageSources(type: Jar) {
 // define artifacts for upload
 artifacts {
     archives jar
-    archives(packageJavadoc) {
-        type = 'javadoc'
-    }
-    archives(packageSources) {
-        type = 'sources'
-    }
+    archives packageJavadoc
+    archives packageSources
 }
 
 // sign all artifacts
